# Industrial_Programming

./: README.md
Find_Number/: Makefile
FizzBuzz/: Makefile  fizzbuzz.cpp  run  test.txt
Labs/Logger/: CMakeLists.txt  README.md
Labs/Logger/demo/: main.cpp
Labs/Logger/include/: logger.hpp
Labs/lab04/: README.md
Labs/lab05/: README.md
Labs/lab05/tests/: test1.cpp
Labs/lab06/: CPackConfig.cmake  ChangeLog.md  README.md
Labs/lab07/: CMakeLists.txt  README.md
Labs/lab07/_logs/polly/clang-cxx14/: log.txt
Labs/lab07/_logs/polly/default/: log-0.txt  log-1.txt  log.txt
Labs/lab08/: DESCRIPTION  README.md
Labs/lab09/: .travis.yml  README.md
Labs/lab10/: README.md  Vagrantfile
Labs/lab10/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
Labs/lab11/: README.md
Obfuscation/: Makefile  Mikita.cpp  algorithm.cpp  main.cpp  run
find-number/: build.sh  run  solution.cpp
fix_bugz/: refactor.cpp  test.cpp
fizz-buzz/: Makefile  build.sh  run  solution.cpp  test.txt
